# trainer

./: Dockerfile  Makefile  README.md  compose.yaml  config.py  database.py  entrypoint.sh  main.py  nginx.conf  pyproject.toml  requirements.txt  todo.md
alembic/: env.py
alembic/versions/: 0ad8e0d072ad_create_tables.py  236a2f42bf53_create_database.py  e6b9d5d3aef0_relationship.py
api/: crud.py  models.py  routers.py  schemas.py  view.py
api/admin/: crud.py  view.py
api/vocab_tests/: crud.py  crud_learned.py  custom_enum.py  models.py  my_enum.py  schemas.py  utils.py  view.py  word_test_enum.py
auth/: crud.py  db_user.py  jwt_helper.py  models.py  permissions.py  schemas.py  utils.py  validator.py  views.py
front/: auth_front.py  learn_words_view.py  routers.py  view.py
redis_data/: dump.rdb
static/: header.css  home.css  homepage.css  learn.css  learn.js  script.js  sign_in.css  sign_up.js  style.css
static/auth/: auth.css  auth.js  sign_in.js  sign_up.js
static/vocab_tests/: constructor.css  constructor.js  tests.css  translate.js  vocab_test_list.css
templates/: base.html  header.html  homepage.html  index.html  learn.html  sign_in.html  sign_up.html
templates/auth/: auth_base.html  sign_in.html  sign_up.html
templates/vocab_tests/: constructor.html  translate.html  vocab_test_list.html
